--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "check": "biome check --write .",
     "dev": "turbo dev",
+    "dev:db-start": "bun db:push && cd apps/server && bun db:local",
+    "dev:macos-tabs": "bash scripts/start-dev-macos.sh",
     "build": "turbo build",
     "check-types": "turbo check-types",
     "dev:native": "turbo -F native dev",
@@ -18,7 +20,9 @@
     "db:generate": "turbo -F server db:generate",
     "db:migrate": "turbo -F server db:migrate"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@openrouter/ai-sdk-provider": "^0.4.5"
+  },
   "devDependencies": {
     "turbo": "^2.4.2",
     "@biomejs/biome": "1.9.4"
