trying different path for vercel

--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/dist/src/index.js"
+      "destination": "/src/api/[[...route]]/route.js"
     }
   ]
 }
