--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,9 +1,8 @@
 {
-  "framework": "node",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/src/api/[[...route]]/route.js"
+      "destination": "/src/index.js"
     }
   ]
 }
