--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,16 +15,17 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "zod": "^3.24.2",
-    "@orpc/server": "^1.2.0",
-    "@orpc/client": "^1.2.0",
-    "hono": "^4.7.6",
-    "drizzle-orm": "^0.38.4",
-    "@libsql/client": "^0.14.0",
-    "ai": "^4.2.8",
     "@ai-sdk/google": "^1.2.3",
-    "better-auth": "^1.2.7"
+    "@hono/node-server": "^1.14.1",
+    "@libsql/client": "^0.14.0",
+    "@orpc/client": "^1.2.0",
+    "@orpc/server": "^1.2.0",
+    "ai": "^4.2.8",
+    "better-auth": "^1.2.7",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
+    "hono": "^4.7.6",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "tsc-alias": "^1.8.11",
