trying to go to configuring purely in vercel.json

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,13 +10,11 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "outDir": "./dist/api",
-    "rootDir": "./src",
+    "outDir": "./dist",
     "types": ["bun"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
-  "include": ["./src/**/*"],
   "tsc-alias": {
     "resolveFullPaths": true
   }
