--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -2,8 +2,6 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "outputDirectory": "dist",
   "functions": {
-    "src/index.js": {
-      "runtime": "nodejs"
-    }
+    "src/index.js": {}
   }
 }
