going for api to make vercel happy, local dev is working

--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -3,6 +3,7 @@ dist/
 /build
 /out/
 
+
 # dev
 .yarn/
 !.yarn/patches
@@ -49,3 +50,7 @@ lerna-debug.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Vercel only thing
+/api 
