--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,7 +10,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "outDir": "./dist",
+    "outDir": "./api",
     "types": ["bun"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
