--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "outputDirectory": "dist",
   "functions": {
-    "src/index.js": {}
+    "api/src/index.js": {
+      "memory": 1024
+    }
   }
 }
