--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "apps/server/src/index.js": {
+    "src/index.js": {
       "memory": 1024
     }
   }
