vercel build local

--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,8 +1,15 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "src/index.js": {
+    "api/src/index.js": {
       "memory": 1024
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api"
+    }
+  ],
+  "redirects": [{ "source": "/", "destination": "/api", "permanent": false }]
 }
