--- a/apps/my-app/tsconfig.json
+++ b/apps/my-app/tsconfig.json
@@ -4,7 +4,15 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "verbatimModuleSyntax": true,
     "strict": true,
-  },
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": ["bun"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx"
+  }
 }
