--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,7 +24,8 @@
     "@libsql/client": "^0.14.0",
     "ai": "^4.2.8",
     "@ai-sdk/google": "^1.2.3",
-    "better-auth": "^1.2.7"
+    "better-auth": "^1.2.7",
+    "@hono/node-server": "^1.13.8"
   },
   "devDependencies": {
     "tsc-alias": "^1.8.11",
