--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,22 +15,25 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "zod": "^3.24.2",
-    "@orpc/server": "^1.2.0",
-    "@orpc/client": "^1.2.0",
-    "hono": "^4.7.6",
-    "drizzle-orm": "^0.38.4",
-    "@libsql/client": "^0.14.0",
-    "ai": "^4.2.8",
     "@ai-sdk/google": "^1.2.3",
+    "@hono/node-server": "^1.13.8",
+    "@libsql/client": "^0.14.0",
+    "@orpc/client": "^1.2.0",
+    "@orpc/server": "^1.2.0",
+    "ai": "^4.2.8",
     "better-auth": "^1.2.7",
-    "@hono/node-server": "^1.13.8"
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
+    "hono": "^4.7.6",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
+    "drizzle-kit": "^0.30.5",
     "tsc-alias": "^1.8.11",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.2",
-    "@types/bun": "^1.2.6",
-    "drizzle-kit": "^0.30.5"
+    "vercel": "^41.7.4"
   }
 }
