--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -12,7 +12,7 @@
 		},
 		"outDir": "./dist",
 		"types": [
-        "bun"
+        "node"
     ],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx"
